# python-cli-starter

./: README.md  pyproject.toml
tests/: test_clistarter.py
